[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://UI/UI_Square.png" type="Texture" id=2]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 1.54756
margin_top = 566.408
margin_right = 201.548
margin_bottom = 598.408
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.25098, 0.235294, 0.235294, 1 )
tint_progress = Color( 0.443137, 0.203922, 0.203922, 1 )
nine_patch_stretch = true

[node name="AmmoText" type="Label" parent="."]
margin_left = 0.902512
margin_top = 524.02
margin_right = 138.903
margin_bottom = 558.02
custom_fonts/font = ExtResource( 3 )
text = "Ammo: 50"

[node name="ScoreText" type="Label" parent="."]
margin_left = 2.80249
margin_top = 482.22
margin_right = 140.802
margin_bottom = 516.22
custom_fonts/font = ExtResource( 3 )
text = "Score:500"
